apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'com.bmuschko.nexus'
buildscript {
	repositories {
		jcenter()
	}

	dependencies {
		classpath 'com.bmuschko:gradle-nexus-plugin:2.2'
		
	}
}
sourceCompatibility = 1.8
version = '0.3.0'
jar {
    manifest {
        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
    }
}

repositories {
    mavenCentral()
	maven { url "http://cmmaven.cm.aol.com:8081/nexus/content/repositories/aol-advertising" }
}

dependencies {
	//compile 'com.aol.advertising.cyclops:lambda-utils:1.0.1'
	compile project(':cyclops-base')
	compile 'org.pcollections:pcollections:2.1.2'
//	compile 'org.jooq:jool:0.9.6'
	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.6.1'
	compile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
	compile group: 'org.projectlombok', name: 'lombok', version:'1.16.2'
	testCompile group: 'com.google.guava', name: 'guava', version: '18.0'
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

test {
    systemProperties 'property': 'value'
}

modifyPom {
	project {
		name 'cyclops-pattern-matching'
		description 'Advanced pattern matching for Java 8'
		url 'http://advertising.com'
		inceptionYear '2015'

		groupId 'com.aol.advertising.cyclops'
		artifactId 'pattern-matching'
		version '0.3.0'
		
		scm {
			url 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
			connection 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
			developerConnection 'ssh://git@stash.ops.aol.com:2022/lana/cyclops.git'
		}

		licenses {
			license {
				name 'The Apache Software License, Version 2.0'
				url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
				distribution 'repo'
			}
		}

		developers {
			developer {
				id 'johnmcclean-aol'
				name 'John McClean'
				email 'john.mcclean@teamaol.com'
			}
		}
	}
}

extraArchive {
	sources = false
	tests = false
	javadoc = false
}

nexus {
	sign = false
	repositoryUrl = 'http://cmmaven.cm.aol.com:8081/nexus/content/repositories/aol-advertising'
	snapshotRepositoryUrl = 'http://cmmaven.cm.aol.com:8081/nexus/content/groups/public'
	
}

